--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+:root {
+  --grid-percent: 0;
+}
+
 * { 
   box-sizing: border-box;
   margin: 0;
@@ -25,7 +29,12 @@ body {
 }
 
 .gridElement {
-  flex: 0 0 6.25%;
-  height: 6.25%;
+  flex: 0 0 var(--grid-percent);
+  height: var(--grid-percent);
+}
+
+#gridReset {
+  padding: 0.5rem;
+  margin: 0.25rem;
 }
 
